--- a/chat/angular.json
+++ b/chat/angular.json
@@ -13,6 +13,11 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies" : [
+                            "socket.io-client",
+                          "socket.io-parser",
+                          "debug"
+                        ], 
             "outputPath": "dist/chat",
             "index": "src/index.html",
             "main": "src/main.ts",
