--- a/chat/package.json
+++ b/chat/package.json
@@ -28,10 +28,12 @@
     "mongodb": "^3.6.2",
     "popper.js": "^1.16.1",
     "rxjs": "^6.5.5",
+    "rxjs-compat": "^6.6.3",
     "save": "^2.4.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "tslib": "^2.0.0",
+    "webpack": "^4.44.2",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
